--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start:ios": "react-native run-ios --simulator=\"iPhone X\"",
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "tsc": "tsc",
-    "clean": "rimraf artifacts",
-    "build": "npm run clean && npm run tsc --",
-    "test": "jest"
+    "test": "jest",
+    "start:ios": "react-native run-ios --simulator=\"iPhone X\"",
+    "lint-fix": "tslint app/**/*.ts --fix"
   },
   "dependencies": {
     "react": "16.3.1",
@@ -21,11 +19,9 @@
     "@types/react-test-renderer": "^16.0.1",
     "babel-jest": "23.0.0",
     "babel-preset-react-native": "4.0.0",
-    "concurrently": "^3.5.1",
     "jest": "23.0.0",
     "react-native-typescript-transformer": "^1.2.9",
     "react-test-renderer": "16.3.1",
-    "rimraf": "^2.6.2",
     "ts-jest": "^22.4.6",
     "tslint": "^5.10.0",
     "typescript": "^2.8.3"
